--- a/lab2.html/lab2.html
+++ b/lab2.html/lab2.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        
-    </body>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+
+</head>
+<body>
+<h1>My First CSS Example</h1>
+<p>This is a paragraph.</p>
+</body>
 </html>
