--- a/lab2.html/lab2.html
+++ b/lab2.html/lab2.html
@@ -5,6 +5,7 @@
 
 </head>
 <body>
+   <img src="P6X_01.jpg"  width="500" height="600">
 <h1>My First CSS Example</h1>
 <p>This is a paragraph.</p>
 </body>
